<resources>
    <string name="app_name">Estudaki</string>
    <string name="content_desc_imagemmatematica">imagemMatematica</string>
    <string name="content_descr_telaincial_colorir">telaincial_colorir</string>
    <string name="content_descri_barra_de_navecagao_calenderio">barra_de_navecagao_calenderio</string>
    <string name="content_descri_barra_de_navecagao_lupa">barra_de_navecagao_lupa</string>
    <string name="content_descri_barra_de_navecagao_home">barra_de_navecagao_home</string>
    <string name="content_descri_barra_de_navecagao_professores">barra_de_navecagao_professores</string>
    <string name="content_descri_barra_de_navecagao_perfil">barra_de_navecagao_perfil</string>
    <string name="content_descr_imagemportugues">imagemportugues</string>
    <string name="content_descr_imagemgeografia">imagemgeografia</string>
    <string name="img_backgound_tela_aulas">img_backgound_tela_aulas</string>
    <string name="img_logo_ajuda">img_logo_ajuda</string>
    <string name="img_logo_login">img_logo_login</string>
    <string name="txt_me_ajuda_without_login1">NÃO TENHO LOGIN E NEM A SENHA</string>
    <string name="txt_me_ajuda_without_login2">ESQUECI MINHA SENHA</string>
    <string name="txt_me_ajuda_with_login1">NÃO CONSIGO ACHAR A MATÉRIA</string>
    <string name="txt_me_ajuda_with_login2">ONDE VEJO MINHA NOTA?</string>
    <string name="btn_chat">Enviar</string>
    <string name="message">Digite uma mensagem</string>
</resources>