<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:visibility="visible">

    <ImageView
        android:id="@+id/img_backgound_tela_aulas8"
        android:layout_width="369dp"
        android:layout_height="814dp"
        android:contentDescription="@string/img_backgound_tela_aulas"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/login_tela_professores" />

    <ScrollView
        android:id="@+id/scrollView4"
        android:layout_width="406dp"
        android:layout_height="628dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView

                android:id="@+id/txt_chatNome"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autoText="true"
                android:fontFamily="@font/comfortaa_light"
                android:gravity="center"
                android:text="Nome_Contato"
                android:textColor="#000000"
                android:textSize="24dp"
                android:textStyle="bold" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btn_enviar_mensagem"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="48dp"
        android:background="@drawable/bg_button_enviar"
        android:text="@string/btn_chat"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:backgroundTint="@color/teal_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/edit_mensagem" />

    <EditText
        android:id="@+id/edit_mensagem"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="48dp"
        android:background="@drawable/bg_edittext"
        android:ems="10"
        android:hint="@string/message"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_enviar_mensagem"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_chat"
        android:layout_width="401dp"
        android:layout_height="0dp"
        android:layout_marginTop="55dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/edit_mensagem"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/scrollView4" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/barradenavegacao"
        android:layout_width="410dp"
        android:layout_height="44dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_mensagem">

        <View
            android:id="@+id/view_calendario"
            android:layout_width="55dp"
            android:layout_height="40dp"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/barra_de_navecagao_calenderio"
            android:layout_width="50dp"
            android:layout_height="35dp"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="4dp"
            android:contentDescription="@string/content_descri_barra_de_navecagao_calenderio"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/bdenavecagao_calendario" />

        <View
            android:id="@+id/view_lupa"
            android:layout_width="55dp"
            android:layout_height="40dp"
            android:layout_marginStart="35dp"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toEndOf="@+id/view_calendario"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/barra_de_navecagao_lupa"
            android:layout_width="50dp"
            android:layout_height="35dp"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="4dp"
            android:contentDescription="@string/content_descri_barra_de_navecagao_lupa"
            app:layout_constraintStart_toEndOf="@+id/barra_de_navecagao_calenderio"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/bdenavecagao_pesquisa" />

        <View
            android:id="@+id/view_home"
            android:layout_width="55dp"
            android:layout_height="40dp"
            android:layout_marginStart="39dp"
            android:layout_marginLeft="39dp"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toEndOf="@+id/barra_de_navecagao_lupa"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/barra_de_navecagao_home"
            android:layout_width="50dp"
            android:layout_height="35dp"
            android:layout_marginStart="44dp"
            android:layout_marginLeft="44dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="4dp"
            android:contentDescription="@string/content_descri_barra_de_navecagao_home"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/barra_de_navecagao_lupa"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/bdenavecagao_home" />

        <View
            android:id="@+id/view_conversa_professor"
            android:layout_width="55dp"
            android:layout_height="40dp"
            android:layout_marginStart="39dp"
            android:layout_marginLeft="39dp"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toEndOf="@+id/view_home"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/barra_de_navecagao_professores"
            android:layout_width="66dp"
            android:layout_height="39dp"
            android:layout_marginStart="36dp"
            android:layout_marginLeft="36dp"
            android:layout_marginTop="4dp"
            android:contentDescription="@string/content_descri_barra_de_navecagao_professores"
            app:layout_constraintStart_toEndOf="@+id/barra_de_navecagao_home"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/bdenavecagao_talkprofessor" />

        <View
            android:id="@+id/view_perfil"
            android:layout_width="55dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toEndOf="@+id/barra_de_navecagao_professores"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/barra_de_navecagao_perfil"
            android:layout_width="47dp"
            android:layout_height="39dp"
            android:layout_marginStart="28dp"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="4dp"
            android:contentDescription="@string/content_descri_barra_de_navecagao_perfil"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/barra_de_navecagao_professores"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/bdenavecagao_perfil" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>