<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/img_backgound_tela_aulas9"
        android:layout_width="400dp"
        android:layout_height="969dp"
        android:contentDescription="@string/img_backgound_tela_aulas"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/login_tela_notas" />

    <ScrollView
        android:id="@+id/scrollView4"
        android:layout_width="411dp"
        android:layout_height="752dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="232dp">

                <ImageView
                    android:id="@+id/imagem_logo_menina"
                    android:layout_width="380dp"
                    android:layout_height="218dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/img_icon_notas" />

                <ImageView
                    android:id="@+id/imageView_me_ajuda_notas"
                    android:layout_width="42dp"
                    android:layout_height="46dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="4dp"
                    android:layout_marginRight="4dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/icon_meajuda" />

                <View
                    android:id="@+id/view_me_ajuda_notas"
                    android:layout_width="42dp"
                    android:layout_height="46dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="4dp"
                    android:layout_marginRight="4dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView

                android:id="@+id/txt_chatNome"
                android:layout_width="match_parent"
                android:layout_height="117dp"
                android:autoText="true"
                android:fontFamily="@font/comfortaa_light"
                android:gravity="center"
                android:text="NOTAS"
                android:textColor="#000000"
                android:textSize="55sp"
                android:textStyle="bold" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="381dp">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerNotas"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </LinearLayout>
    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="410dp"
        android:layout_height="44dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2">

        <View
            android:id="@+id/view_calendario"
            android:layout_width="55dp"
            android:layout_height="40dp"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/barra_de_navecagao_calenderio"
            android:layout_width="50dp"
            android:layout_height="35dp"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="4dp"
            android:contentDescription="@string/content_descri_barra_de_navecagao_calenderio"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/bdenavecagao_calendario" />

        <View
            android:id="@+id/view_notas"
            android:layout_width="55dp"
            android:layout_height="40dp"
            android:layout_marginStart="35dp"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toEndOf="@+id/view_calendario"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/icon_menu_materias_notas"
            android:layout_width="50dp"
            android:layout_height="35dp"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="4dp"
            android:contentDescription="@string/content_descri_barra_de_navecagao_lupa"
            app:layout_constraintStart_toEndOf="@+id/barra_de_navecagao_calenderio"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/icon_notas" />

        <View
            android:id="@+id/view_home"
            android:layout_width="55dp"
            android:layout_height="40dp"
            android:layout_marginStart="39dp"
            android:layout_marginLeft="39dp"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toEndOf="@+id/icon_menu_materias_notas"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/barra_de_navecagao_home"
            android:layout_width="50dp"
            android:layout_height="35dp"
            android:layout_marginStart="44dp"
            android:layout_marginLeft="44dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="4dp"
            android:contentDescription="@string/content_descri_barra_de_navecagao_home"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/icon_menu_materias_notas"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/bdenavecagao_home" />

        <View
            android:id="@+id/view_conversa_professor"
            android:layout_width="55dp"
            android:layout_height="40dp"
            android:layout_marginStart="39dp"
            android:layout_marginLeft="39dp"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toEndOf="@+id/view_home"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/barra_de_navecagao_professores"
            android:layout_width="66dp"
            android:layout_height="39dp"
            android:layout_marginStart="36dp"
            android:layout_marginLeft="36dp"
            android:layout_marginTop="4dp"
            android:contentDescription="@string/content_descri_barra_de_navecagao_professores"
            app:layout_constraintStart_toEndOf="@+id/barra_de_navecagao_home"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/bdenavecagao_talkprofessor" />

        <View
            android:id="@+id/view_perfil"
            android:layout_width="55dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toEndOf="@+id/barra_de_navecagao_professores"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/barra_de_navecagao_perfil"
            android:layout_width="47dp"
            android:layout_height="39dp"
            android:layout_marginStart="28dp"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="4dp"
            android:contentDescription="@string/content_descri_barra_de_navecagao_perfil"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/barra_de_navecagao_professores"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/bdenavecagao_perfil" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>