<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/telaLogin"
    android:scrollbarSize="50dp"
    android:scrollbarStyle="insideInset"
    android:visibility="visible">

    <ImageView
        android:id="@+id/img_backgound_tela_login"
        android:layout_width="427dp"
        android:layout_height="794dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:contentDescription="@string/img_backgound_tela_aulas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/login_tela_detalhe" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="-9dp"
        tools:layout_editor_absoluteY="206dp">

        <EditText
            android:id="@+id/senha_login"
            android:layout_width="292dp"
            android:layout_height="38dp"
            android:layout_marginStart="131dp"
            android:layout_marginLeft="131dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="131dp"
            android:layout_marginRight="131dp"
            android:background="#FFFFFF"
            android:ems="10"
            android:inputType="textPassword"
            android:textColor="#000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.508"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_login" />

        <ImageView
            android:id="@+id/img_logo_login"
            android:layout_width="133dp"
            android:layout_height="146dp"
            android:layout_marginStart="128dp"
            android:layout_marginLeft="128dp"
            android:layout_marginTop="144dp"
            android:contentDescription="@string/img_logo_login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/boneco_login" />

        <Button


            android:id="@+id/button_login"
            android:layout_width="149dp"
            android:layout_height="52dp"
            android:layout_marginStart="131dp"
            android:layout_marginLeft="131dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="131dp"
            android:layout_marginRight="131dp"
            android:text="LOGIN"
            android:textColor="#000000"
            android:textStyle="bold"
            app:backgroundTint="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/senha_login" />

        <EditText
            android:id="@+id/email_login"
            android:layout_width="291dp"
            android:layout_height="44dp"
            android:layout_marginTop="56dp"
            android:background="#F8F8F8"
            android:ems="10"
            android:inputType="textPersonName"
            android:scrollbarStyle="outsideInset"
            android:text="Digite seu email ..."
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_logo_login" />

        <ImageView
            android:id="@+id/img_logo_ajuda"
            android:layout_width="42dp"
            android:layout_height="46dp"
            android:layout_marginTop="184dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:contentDescription="@string/img_logo_ajuda"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_login"
            app:srcCompat="@drawable/tela_login_meajuda" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>